methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:17: error: not enough arguments for method setBrushColor: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    setBrushColor()
                 ^PatternPicture:35: error: not enough arguments for method setBrushColor: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    setBrushColor()
                 ^PatternPicture:52: error: not enough arguments for method setBrushColor: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    setBrushColor()
                 ^