methods.picture.PatternPicture.scala.code
override def run() {
  def carre(){
    forward()
    getBrushColor()
    brushDown()
    right()
    brushUp()
    forward()
    left()
    forward()
    brushDown()
    left()
    brushUp()
    forward()
    left()
    forward()
    setBrushColor()
    brushDown()
    forward()
    brushUp()
    left()
    forward()
    brushDown()
    left()
    brushUp()
    forward()
    left()
    forward()
    left()
    backward()
    backward()
    left()
    forward()
    forward()
    setBrushColor()
    brushDown()
    right()
    brushUp()
    forward()
    left()
    forward()
    brushDown()
    right()
    brushUp()
    forward()
    left()
    forward()
    left()
    forward()
    forward()
    forward()
    setBrushColor()
    brushDown()
    left()
    brushUp()
    forward()
    left()
    forward()
    brushDown()
    left()
    brushUp()
    forward()
    left()
    backward()
    backward()
    left()
    backward()
    backward()
    droite()
    forward()
    forward()
    forward()      
  }
}